[package]
name = "astra-stack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["headers", "multipart", "macros", "ws"] }
chrono = "0.4.24"
dotenv = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95", features = ["preserve_order"] }
sqlx = { version = "0.6.3", features = ["postgres", "chrono", "macros", "migrate", "runtime-tokio-rustls"] }
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
